Upgrade to hbase 2.2.0-mdh3, use slf4j instead of commons-logging, fix compile errors, still need to fix UTs