@@ -1,11 +1,20 @@
 package org.apache.hadoop.hbase.themis;
 
+import static org.junit.Assert.assertArrayEquals;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.fail;
+
 import java.io.IOException;
 import java.util.Map;
-
-import org.apache.hadoop.hbase.KeyValue;
+import org.apache.hadoop.hbase.Cell;
+import org.apache.hadoop.hbase.CellUtil;
+import org.apache.hadoop.hbase.TableName;
+import org.apache.hadoop.hbase.client.Admin;
 import org.apache.hadoop.hbase.client.Get;
-import org.apache.hadoop.hbase.client.HBaseAdmin;
 import org.apache.hadoop.hbase.client.Result;
 import org.apache.hadoop.hbase.themis.cache.ColumnMutationCache;
 import org.apache.hadoop.hbase.themis.columns.Column;
@@ -28,57 +37,59 @@ public class TestTransactionWrite extends ClientTestBase {
     super.initEnv();
     createTransactionWithMock();
   }
-  
+
   @Test
   public void testLocalMutation() throws IOException {
     // add a put mutation
     transaction.put(TABLENAME, getThemisPut(COLUMN));
     ColumnMutationCache mutationCache = transaction.mutationCache;
-    Assert.assertEquals(1, mutationCache.size());
-    Assert.assertTrue(mutationCache.hasMutation(COLUMN));
+    assertEquals(1, mutationCache.size());
+    assertTrue(mutationCache.hasMutation(COLUMN));
     // add another put mutation into the same column
     transaction.put(TABLENAME, getThemisPut(COLUMN, ANOTHER_VALUE));
     mutationCache = transaction.mutationCache;
-    Assert.assertEquals(1, mutationCache.size());
-    Assert.assertTrue(mutationCache.hasMutation(COLUMN));
-    Assert.assertTrue(Bytes.equals(ANOTHER_VALUE, mutationCache.getMutation(COLUMN).getSecond()));
+    assertEquals(1, mutationCache.size());
+    assertTrue(mutationCache.hasMutation(COLUMN));
+    assertTrue(Bytes.equals(ANOTHER_VALUE, mutationCache.getMutation(COLUMN).getSecond()));
     // put contains different columns
     transaction.put(TABLENAME, getThemisPut(COLUMN_WITH_ANOTHER_FAMILY));
     mutationCache = transaction.mutationCache;
-    Assert.assertEquals(2, mutationCache.size());
-    Assert.assertTrue(mutationCache.hasMutation(COLUMN));
-    Assert.assertTrue(mutationCache.hasMutation(COLUMN_WITH_ANOTHER_FAMILY));
+    assertEquals(2, mutationCache.size());
+    assertTrue(mutationCache.hasMutation(COLUMN));
+    assertTrue(mutationCache.hasMutation(COLUMN_WITH_ANOTHER_FAMILY));
     // add delete of the same column
     ThemisDelete delete = new ThemisDelete(ROW);
     delete.deleteColumn(FAMILY, QUALIFIER);
     transaction.delete(TABLENAME, delete);
-    Assert.assertEquals(2, mutationCache.size());
-    Assert.assertTrue(mutationCache.hasMutation(COLUMN));
-    Assert.assertTrue(mutationCache.hasMutation(COLUMN_WITH_ANOTHER_FAMILY));
+    assertEquals(2, mutationCache.size());
+    assertTrue(mutationCache.hasMutation(COLUMN));
+    assertTrue(mutationCache.hasMutation(COLUMN_WITH_ANOTHER_FAMILY));
     // another table with columns
     ThemisPut pPut = getThemisPut(COLUMN);
-    pPut.add(COLUMN_WITH_ANOTHER_FAMILY.getFamily(), COLUMN_WITH_ANOTHER_FAMILY.getQualifier(), VALUE);
+    pPut.add(COLUMN_WITH_ANOTHER_FAMILY.getFamily(), COLUMN_WITH_ANOTHER_FAMILY.getQualifier(),
+      VALUE);
     transaction.put(ANOTHER_TABLENAME, pPut);
-    Assert.assertEquals(4, transaction.mutationCache.size());
-    Assert.assertTrue(mutationCache.hasMutation(COLUMN));
-    Assert.assertTrue(mutationCache.hasMutation(COLUMN_WITH_ANOTHER_FAMILY));
-    Assert.assertTrue(mutationCache.hasMutation(COLUMN_WITH_ANOTHER_TABLE));
-    ColumnCoordinate expectColumn = new ColumnCoordinate(ANOTHER_TABLENAME, ROW, ANOTHER_FAMILY, QUALIFIER);
-    Assert.assertTrue(mutationCache.hasMutation(expectColumn));
+    assertEquals(4, transaction.mutationCache.size());
+    assertTrue(mutationCache.hasMutation(COLUMN));
+    assertTrue(mutationCache.hasMutation(COLUMN_WITH_ANOTHER_FAMILY));
+    assertTrue(mutationCache.hasMutation(COLUMN_WITH_ANOTHER_TABLE));
+    ColumnCoordinate expectColumn =
+      new ColumnCoordinate(ANOTHER_TABLENAME, ROW, ANOTHER_FAMILY, QUALIFIER);
+    assertTrue(mutationCache.hasMutation(expectColumn));
   }
-  
+
   @Test
   public void testSelectPrimaryAndSecondaries() throws IOException {
     // test null mutations
     createTransactionWithMock();
     try {
       transaction.selectPrimaryAndSecondaries();
-      Assert.fail();
+      fail();
     } catch (IOException e) {
     }
 
-    boolean[] isAddAuxiliaries = {true, false};
-    for (boolean isAddAuxiliary: isAddAuxiliaries) {
+    boolean[] isAddAuxiliaries = { true, false };
+    for (boolean isAddAuxiliary : isAddAuxiliaries) {
       createTransactionWithMock();
       applyTransactionMutations();
       ThemisPut put = new ThemisPut(ANOTHER_ROW);
@@ -88,43 +99,43 @@ public class TestTransactionWrite extends ClientTestBase {
       put.add(ANOTHER_FAMILY, QUALIFIER, VALUE);
       if (isAddAuxiliary) {
         put.add(ColumnUtil.getAuxiliaryFamilyBytes(), ColumnUtil.getAuxiliaryQualifierBytes(),
-            AUXILIARY_VALUE);
+          AUXILIARY_VALUE);
       }
       transaction.put(ANOTHER_TABLENAME, put);
       transaction.selectPrimaryAndSecondaries();
-      ColumnCoordinate expectPrimary = new ColumnCoordinate(ANOTHER_TABLENAME, ANOTHER_ROW,
-          ANOTHER_FAMILY, QUALIFIER);
-      Assert.assertEquals(expectPrimary, transaction.primary);
-      Assert.assertEquals(2, transaction.primaryRow.size());
-      Assert.assertArrayEquals(ANOTHER_ROW, transaction.primaryRow.getRow());
-      Assert.assertTrue(transaction.primaryRow.hasMutation(ANOTHER_FAMILY, QUALIFIER));
-      Assert.assertTrue(transaction.primaryRow.hasMutation(FAMILY, QUALIFIER));
+      ColumnCoordinate expectPrimary =
+        new ColumnCoordinate(ANOTHER_TABLENAME, ANOTHER_ROW, ANOTHER_FAMILY, QUALIFIER);
+      assertEquals(expectPrimary, transaction.primary);
+      assertEquals(2, transaction.primaryRow.size());
+      assertArrayEquals(ANOTHER_ROW, transaction.primaryRow.getRow());
+      assertTrue(transaction.primaryRow.hasMutation(ANOTHER_FAMILY, QUALIFIER));
+      assertTrue(transaction.primaryRow.hasMutation(FAMILY, QUALIFIER));
       if (isAddAuxiliary) {
-        Assert.assertTrue(!transaction.primaryRow.hasMutation(ColumnUtil.getAuxiliaryFamilyBytes(),
+        assertTrue(!transaction.primaryRow.hasMutation(ColumnUtil.getAuxiliaryFamilyBytes(),
           ColumnUtil.getAuxiliaryQualifierBytes()));
-        Assert.assertArrayEquals(transaction.auxiliaryColumnMutation.getValue(), AUXILIARY_VALUE);
+        assertArrayEquals(transaction.auxiliaryColumnMutation.getValue(), AUXILIARY_VALUE);
       }
-      Assert.assertArrayEquals(ANOTHER_TABLENAME, transaction.secondaryRows.get(0).getFirst());
-      Assert.assertArrayEquals(ROW, transaction.secondaryRows.get(0).getSecond().getRow());
-      Assert.assertEquals(1, transaction.secondaryRows.get(0).getSecond().size());
+      assertEquals(ANOTHER_TABLENAME, transaction.secondaryRows.get(0).getFirst());
+      assertArrayEquals(ROW, transaction.secondaryRows.get(0).getSecond().getRow());
+      assertEquals(1, transaction.secondaryRows.get(0).getSecond().size());
       Assert
-          .assertTrue(transaction.secondaryRows.get(0).getSecond().hasMutation(FAMILY, QUALIFIER));
+        .assertTrue(transaction.secondaryRows.get(0).getSecond().hasMutation(FAMILY, QUALIFIER));
 
-      Assert.assertArrayEquals(TABLENAME, transaction.secondaryRows.get(1).getFirst());
-      Assert.assertArrayEquals(ANOTHER_ROW, transaction.secondaryRows.get(1).getSecond().getRow());
-      Assert.assertEquals(1, transaction.secondaryRows.get(1).getSecond().size());
+      assertEquals(TABLENAME, transaction.secondaryRows.get(1).getFirst());
+      assertArrayEquals(ANOTHER_ROW, transaction.secondaryRows.get(1).getSecond().getRow());
+      assertEquals(1, transaction.secondaryRows.get(1).getSecond().size());
       Assert
-          .assertTrue(transaction.secondaryRows.get(1).getSecond().hasMutation(FAMILY, QUALIFIER));
+        .assertTrue(transaction.secondaryRows.get(1).getSecond().hasMutation(FAMILY, QUALIFIER));
 
-      Assert.assertArrayEquals(TABLENAME, transaction.secondaryRows.get(2).getFirst());
-      Assert.assertArrayEquals(ROW, transaction.secondaryRows.get(2).getSecond().getRow());
-      Assert.assertEquals(3, transaction.secondaryRows.get(2).getSecond().size());
+      assertEquals(TABLENAME, transaction.secondaryRows.get(2).getFirst());
+      assertArrayEquals(ROW, transaction.secondaryRows.get(2).getSecond().getRow());
+      assertEquals(3, transaction.secondaryRows.get(2).getSecond().size());
       Assert
-          .assertTrue(transaction.secondaryRows.get(2).getSecond().hasMutation(FAMILY, QUALIFIER));
-      Assert.assertTrue(
-          transaction.secondaryRows.get(2).getSecond().hasMutation(ANOTHER_FAMILY, QUALIFIER));
-      Assert.assertTrue(
-          transaction.secondaryRows.get(2).getSecond().hasMutation(FAMILY, ANOTHER_QUALIFIER));
+        .assertTrue(transaction.secondaryRows.get(2).getSecond().hasMutation(FAMILY, QUALIFIER));
+      assertTrue(
+        transaction.secondaryRows.get(2).getSecond().hasMutation(ANOTHER_FAMILY, QUALIFIER));
+      assertTrue(
+        transaction.secondaryRows.get(2).getSecond().hasMutation(FAMILY, ANOTHER_QUALIFIER));
 
       // test single mutations
       createTransactionWithMock();
@@ -132,35 +143,35 @@ public class TestTransactionWrite extends ClientTestBase {
       put.add(FAMILY, QUALIFIER, VALUE);
       if (isAddAuxiliary) {
         put.add(ColumnUtil.getAuxiliaryFamilyBytes(), ColumnUtil.getAuxiliaryQualifierBytes(),
-            AUXILIARY_VALUE);
+          AUXILIARY_VALUE);
       }
       transaction.put(TABLENAME, put);
       transaction.selectPrimaryAndSecondaries();
-      Assert.assertEquals(1, transaction.primaryRow.size());
-      Assert.assertTrue(transaction.primaryRow.hasMutation(FAMILY, QUALIFIER));
+      assertEquals(1, transaction.primaryRow.size());
+      assertTrue(transaction.primaryRow.hasMutation(FAMILY, QUALIFIER));
       if (isAddAuxiliary) {
-        Assert.assertTrue(!transaction.primaryRow.hasMutation(ColumnUtil.getAuxiliaryFamilyBytes(),
+        assertTrue(!transaction.primaryRow.hasMutation(ColumnUtil.getAuxiliaryFamilyBytes(),
           ColumnUtil.getAuxiliaryQualifierBytes()));
-        Assert.assertArrayEquals(transaction.auxiliaryColumnMutation.getValue(), AUXILIARY_VALUE);
+        assertArrayEquals(transaction.auxiliaryColumnMutation.getValue(), AUXILIARY_VALUE);
       }
-      Assert.assertEquals(0, transaction.secondaryRows.size());
+      assertEquals(0, transaction.secondaryRows.size());
     }
   }
-  
+
   @Test
   public void testConstructLock() throws IOException {
     preparePrewrite();
     PrimaryLock primaryLock = transaction.constructPrimaryLock();
-    Assert.assertEquals(4, primaryLock.getSecondaryColumns().size());
-    Assert.assertEquals(prewriteTs, primaryLock.getTimestamp());
-    
+    assertEquals(4, primaryLock.getSecondaryColumns().size());
+    assertEquals(prewriteTs, primaryLock.getTimestamp());
+
     for (ColumnCoordinate secondary : transaction.secondaries) {
       SecondaryLock secondaryLock = transaction.constructSecondaryLock(getColumnType(secondary));
-      Assert.assertEquals(transaction.primary, secondaryLock.getPrimaryColumn());
-      Assert.assertEquals(prewriteTs, secondaryLock.getTimestamp());
+      assertEquals(transaction.primary, secondaryLock.getPrimaryColumn());
+      assertEquals(prewriteTs, secondaryLock.getTimestamp());
     }
   }
-  
+
   @Test
   public void testPrewritePrimary() throws IOException {
     preparePrewrite();
@@ -172,11 +183,11 @@ public class TestTransactionWrite extends ClientTestBase {
   public void testPrewritePrimaryWithAuxiliary() throws IOException {
     preparePrewrite(false, true);
     transaction.prewritePrimary();
-    Assert.assertNotNull(transaction.auxiliaryColumnMutation);
+    assertNotNull(transaction.auxiliaryColumnMutation);
     ColumnCoordinate auxiliaryCC = new ColumnCoordinate(transaction.primary.getTableName(),
-        transaction.primary.getRow(), transaction.auxiliaryColumnMutation);
+      transaction.primary.getRow(), transaction.auxiliaryColumnMutation);
     checkPrewriteRowSuccess(transaction.primary.getTableName(), transaction.primaryRow,
-        auxiliaryCC);
+      auxiliaryCC);
   }
 
   @Test
@@ -194,12 +205,12 @@ public class TestTransactionWrite extends ClientTestBase {
     transaction.prewritePrimary();
     try {
       transaction.prewriteSecondaries();
-      Assert.fail();
+      fail();
     } catch (WriteConflictException e) {
       checkTransactionRollback();
     }
   }
-  
+
   @Test
   public void testPrewriteFailDueToLockConflict() throws IOException {
     ColumnCoordinate conflictColumn = COLUMN_WITH_ANOTHER_ROW;
@@ -209,7 +220,7 @@ public class TestTransactionWrite extends ClientTestBase {
     transaction.prewritePrimary();
     try {
       transaction.prewriteSecondaries();
-      Assert.fail();
+      fail();
     } catch (LockConflictException e) {
       checkTransactionRollback();
     }
@@ -221,7 +232,7 @@ public class TestTransactionWrite extends ClientTestBase {
     transaction.commitPrimary();
     checkCommitRowSuccess(transaction.primary.getTableName(), transaction.primaryRow);
     ColumnCoordinate auxiliaryCC = new ColumnCoordinate(transaction.primary.getTableName(),
-        transaction.primary.getRow(), transaction.auxiliaryColumnMutation);
+      transaction.primary.getRow(), transaction.auxiliaryColumnMutation);
     checkCommitAuxiliaryColumnSuccess(auxiliaryCC);
 
     // primary lock erased, commit primary fail
@@ -230,70 +241,68 @@ public class TestTransactionWrite extends ClientTestBase {
     eraseLock(COLUMN, prewriteTs);
     try {
       transaction.commitPrimary();
-      Assert.fail();
+      fail();
     } catch (LockCleanedException e) {
-      Assert.assertNull(readPut(COLUMN));
+      assertNull(readPut(COLUMN));
       checkSecondariesRollback();
-      auxiliaryCC = new ColumnCoordinate(transaction.primary.getTableName(), transaction.primary.getRow(),
-          transaction.auxiliaryColumnMutation);
-      Assert.assertNull(readDataValue(auxiliaryCC, commitTs));
+      auxiliaryCC = new ColumnCoordinate(transaction.primary.getTableName(),
+        transaction.primary.getRow(), transaction.auxiliaryColumnMutation);
+      assertNull(readDataValue(auxiliaryCC, commitTs));
     }
 
     // other ioexception, commit primary fail
     deleteOldDataAndUpdateTs();
     prepareCommit(false, true);
-    HBaseAdmin admin = new HBaseAdmin(connection.getConfiguration());
-    admin.disableTable(TABLENAME);
-    try {
-      transaction.commitPrimary();
-      Assert.fail();
-    } catch (IOException e) {
-      Assert.assertFalse(e instanceof LockCleanedException);
-      admin.enableTable(TABLENAME);
-      checkPrewriteRowSuccess(transaction.primary.getTableName(), transaction.primaryRow);
-      checkPrewriteSecondariesSuccess();
-      auxiliaryCC = new ColumnCoordinate(transaction.primary.getTableName(), transaction.primary.getRow(),
-          transaction.auxiliaryColumnMutation);
-      Assert.assertNull(readDataValue(auxiliaryCC, commitTs));
-    } finally {
-      admin.close();
+    try (Admin admin = connection.getAdmin()) {
+      admin.disableTable(TABLENAME);
+      try {
+        transaction.commitPrimary();
+        fail();
+      } catch (IOException e) {
+        assertFalse(e instanceof LockCleanedException);
+        admin.enableTable(TABLENAME);
+        checkPrewriteRowSuccess(transaction.primary.getTableName(), transaction.primaryRow);
+        checkPrewriteSecondariesSuccess();
+        auxiliaryCC = new ColumnCoordinate(transaction.primary.getTableName(),
+          transaction.primary.getRow(), transaction.auxiliaryColumnMutation);
+        assertNull(readDataValue(auxiliaryCC, commitTs));
+      }
     }
   }
-  
+
   @Test
   public void testCommitPrimary() throws IOException {
     // commit primary success
     prepareCommit();
     transaction.commitPrimary();
     checkCommitRowSuccess(transaction.primary.getTableName(), transaction.primaryRow);
-    
+
     // primary lock erased, commit primary fail
     deleteOldDataAndUpdateTs();
     prepareCommit();
     eraseLock(COLUMN, prewriteTs);
     try {
       transaction.commitPrimary();
-      Assert.fail();
+      fail();
     } catch (LockCleanedException e) {
-      Assert.assertNull(readPut(COLUMN));
+      assertNull(readPut(COLUMN));
       checkSecondariesRollback();
     }
-    
+
     // other ioexception, commit primary fail
     deleteOldDataAndUpdateTs();
     prepareCommit();
-    HBaseAdmin admin = new HBaseAdmin(connection.getConfiguration());
-    admin.disableTable(TABLENAME);
-    try {
-      transaction.commitPrimary();
-      Assert.fail();
-    } catch (IOException e) {
-      Assert.assertFalse(e instanceof LockCleanedException);
-      admin.enableTable(TABLENAME);
-      checkPrewriteRowSuccess(transaction.primary.getTableName(), transaction.primaryRow);
-      checkPrewriteSecondariesSuccess();
-    } finally {
-      admin.close();
+    try (Admin admin = connection.getAdmin()) {
+      admin.disableTable(TABLENAME);
+      try {
+        transaction.commitPrimary();
+        fail();
+      } catch (IOException e) {
+        assertFalse(e instanceof LockCleanedException);
+        admin.enableTable(TABLENAME);
+        checkPrewriteRowSuccess(transaction.primary.getTableName(), transaction.primaryRow);
+        checkPrewriteSecondariesSuccess();
+      }
     }
   }
 
@@ -312,14 +321,16 @@ public class TestTransactionWrite extends ClientTestBase {
     // commit one secondary lock fail
     deleteOldDataAndUpdateTs();
     prepareCommit();
-    HBaseAdmin admin = new HBaseAdmin(connection.getConfiguration());
-    admin.disableTable(ANOTHER_TABLENAME);
-    transaction.commitSecondaries();
-    admin.enableTable(ANOTHER_TABLENAME);
-    for (Pair<byte[], RowMutation> secondaryRow : transaction.secondaryRows) {
+    try (Admin admin = connection.getAdmin()) {
+      admin.disableTable(ANOTHER_TABLENAME);
+      transaction.commitSecondaries();
+      admin.enableTable(ANOTHER_TABLENAME);
+    }
+    for (Pair<TableName, RowMutation> secondaryRow : transaction.secondaryRows) {
       RowMutation rowMutation = secondaryRow.getSecond();
       for (Column column : rowMutation.getColumns()) {
-        ColumnCoordinate c = new ColumnCoordinate(secondaryRow.getFirst(), rowMutation.getRow(), column); 
+        ColumnCoordinate c =
+          new ColumnCoordinate(secondaryRow.getFirst(), rowMutation.getRow(), column);
         if (COLUMN_WITH_ANOTHER_TABLE.equals(c)) {
           checkPrewriteColumnSuccess(c);
         } else {
@@ -327,43 +338,42 @@ public class TestTransactionWrite extends ClientTestBase {
         }
       }
     }
-    admin.close();
   }
 
-  protected Pair<byte[], ThemisPut> getAuxiliaryRequest() throws IOException {
-    byte[] tableName = null;
+  protected Pair<TableName, ThemisPut> getAuxiliaryRequest() throws IOException {
+    TableName tableName = null;
     byte[] row = null;
     if (transaction.primary != null) {
       tableName = transaction.primary.getTableName();
       row = transaction.primary.getRow();
     } else {
-      Map.Entry<byte[], Map<byte[], RowMutation>> primaryEntry = transaction.getMutations()
-          .getMutations().iterator().next();
+      Map.Entry<TableName, Map<byte[], RowMutation>> primaryEntry =
+        transaction.getMutations().getMutations().iterator().next();
       tableName = primaryEntry.getKey();
       row = primaryEntry.getValue().keySet().iterator().next();
     }
     ThemisPut put = new ThemisPut(row);
     put.add(ColumnUtil.getAuxiliaryFamilyBytes(), ColumnUtil.getAuxiliaryQualifierBytes(),
-        AUXILIARY_VALUE);
-    return new Pair<byte[], ThemisPut>(tableName, put);
+      AUXILIARY_VALUE);
+    return new Pair<>(tableName, put);
   }
 
   @Test
   public void testTransactionSuccess() throws IOException {
-    boolean[] isAddAuxiliaries = {false, true};
+    boolean[] isAddAuxiliaries = { false, true };
     for (boolean isAddAuxiliary : isAddAuxiliaries) {
       deleteOldDataAndUpdateTs();
       createTransactionWithMock();
       applyMutations(TRANSACTION_COLUMNS);
       if (isAddAuxiliary) {
-        Pair<byte[], ThemisPut> auxiliaryRequest = getAuxiliaryRequest();
+        Pair<TableName, ThemisPut> auxiliaryRequest = getAuxiliaryRequest();
         transaction.put(auxiliaryRequest.getFirst(), auxiliaryRequest.getSecond());
       }
       transaction.commit();
       checkTransactionCommitSuccess();
       if (isAddAuxiliary) {
         ColumnCoordinate auxiliaryCC = new ColumnCoordinate(transaction.primary.getTableName(),
-            transaction.primary.getRow(), transaction.auxiliaryColumnMutation);
+          transaction.primary.getRow(), transaction.auxiliaryColumnMutation);
         checkCommitAuxiliaryColumnSuccess(auxiliaryCC);
       }
 
@@ -371,23 +381,23 @@ public class TestTransactionWrite extends ClientTestBase {
       deleteOldDataAndUpdateTs();
       createTransactionWithMock();
       applyMutations(new ColumnCoordinate[] { COLUMN, COLUMN_WITH_ANOTHER_FAMILY,
-          COLUMN_WITH_ANOTHER_QUALIFIER });
+        COLUMN_WITH_ANOTHER_QUALIFIER });
       mockTimestamp(commitTs);
       if (isAddAuxiliary) {
-        Pair<byte[], ThemisPut> auxiliaryRequest = getAuxiliaryRequest();
+        Pair<TableName, ThemisPut> auxiliaryRequest = getAuxiliaryRequest();
         transaction.put(auxiliaryRequest.getFirst(), auxiliaryRequest.getSecond());
       }
       transaction.commit();
-      Assert.assertEquals(0, transaction.secondaryRows.size());
+      assertEquals(0, transaction.secondaryRows.size());
       checkCommitRowSuccess(TABLENAME, transaction.primaryRow);
       if (isAddAuxiliary) {
         ColumnCoordinate auxiliaryCC = new ColumnCoordinate(transaction.primary.getTableName(),
-            transaction.primary.getRow(), transaction.auxiliaryColumnMutation);
+          transaction.primary.getRow(), transaction.auxiliaryColumnMutation);
         checkCommitAuxiliaryColumnSuccess(auxiliaryCC);
       }
     }
   }
-  
+
   @Test
   public void testPutAndDeleteToTheSameColumn() throws IOException {
     ThemisPut put = new ThemisPut(ROW);
@@ -399,10 +409,10 @@ public class TestTransactionWrite extends ClientTestBase {
     mockTimestamp(commitTs);
     transaction.commit();
     Result result = getTable(TABLENAME).get(new Get(ROW));
-    Assert.assertEquals(1, result.size());
+    assertEquals(1, result.size());
     Column expect = ColumnUtil.getDeleteColumn(COLUMN);
-    KeyValue kv = result.list().get(0);
-    Column actual = new Column(kv.getFamily(), kv.getQualifier());
-    Assert.assertTrue(expect.equals(actual));
+    Cell kv = result.rawCells()[0];
+    Column actual = new Column(CellUtil.cloneFamily(kv), CellUtil.cloneQualifier(kv));
+    assertTrue(expect.equals(actual));
   }
 }
